Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int getJointCount(const char *strIpAddress = "");
DIANA_API int deleteWayPoint(/*IN[64]*/ const char *waypointName, /*IN*/ const char *strIpAddress = "");
DIANA_API int setExternalAppendTorCutoffFreq(/*IN*/ double dblFreq, /*IN*/ const char *strIpAddress = "");
DIANA_API int zeroSpaceManualMove(/*IN*/ int direction, /*IN[7]*/ double *dblJointsVel,
                                  /*IN[7]*/ double *dblJointAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int updateForce(/*[IN]*/ double dblForceValue, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedResultSize(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedJoints(/*IN*/ const int id, /*IN*/ const int index, /*OUT[7]*/ double *joints,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int destoryInverseClosedItems(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int calculateJacobi(/*OUT[6*7]*/ double *dblJacobiMatrix, /*IN[7]*/ const double *dblJointPosition,
                              /*IN*/ int intJointCount, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpForceInToolCoordinate(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int speedLOnTcp(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDefaultActiveTcp(/*OUT[16]*/ double *default_tcp, /*IN*/ const char *strIpAddress = "");