Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

DIANA_API int getDefaultActiveTcpPose(/*OUT[6]*/ double *arrPose, /*IN*/ const char *strIpAddress = "");
DIANA_API int getActiveTcpPayload(/*OUT[10]*/ double *payload, /*IN*/ const char *strIpAddress = "");
DIANA_API int moveTcp_ex(/*IN*/ coordinate_e c, /*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                         /*IN*/ const char *strIpAddress = "");
DIANA_API int poseTransform(/*IN[6]*/ double *srcPose, /*IN[6]*/ double *srcMatrixPose, /*IN[6]*/ double *dstMartixPose,
                            /*OUT[6]*/ double *dstPose);
DIANA_API int inverseClosedFull(/*IN[6]*/ const double *pose, /*IN*/ const int lock_joint_index,
                                /*IN*/ const double lock_joint_position, /*IN[7]*/ double *ref_joints,
                                /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getGravInfo(/*IN[3]*/ double *grav, /*IN*/ const char *strIpAddress = "");
DIANA_API int setGravInfo(/*IN[3]*/ const double *grav, /*IN*/ const char *strIpAddress = "");
DIANA_API int getGravAxis(/*IN[3]*/ double *grav_axis, /*IN*/ const char *strIpAddress = "");
DIANA_API int setGravAxis(/*IN[3]*/ const double *grav_axis, /*IN*/ const char *strIpAddress = "");