Modules/LancetHardwareDevice/DianaApi/include/DianaAPIDef.h

extern "C" typedef enum _MoveTCPDirection {
    T_MOVE_X_UP,
    T_MOVE_X_DOWN,
    T_MOVE_Y_UP,
    T_MOVE_Y_DOWN,
    T_MOVE_Z_UP,
    T_MOVE_Z_DOWN
} tcp_direction_e;
extern "C" typedef enum _Coordinate_E {
    E_BASE_COORDINATE = 0,
    E_TOOL_COORDINATE,
    E_WORK_PIECE_COORDINATE,
    E_VIEW_COORDINATE
} coordinate_e;